# safewalk

./: .gitignore  Cargo.toml  README.md
src/: graph.rs  main.rs  safety.rs
test/: index.html
