[package]
name = "routing"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }

# Geospatial & Math
geo = "0.28"
osmpbf = "0.3"
h3o = "0.3" # Hexagonal hierarchical geospatial indexing system
petgraph = "0.6"
rstar = "0.12.2"

# Utilities
anyhow = "1.0"
itertools = "0.12"
lazy_static = "1.4"
